--- a/css/styles.css
+++ b/css/styles.css
@@ -2883,7 +2883,7 @@ fieldset:disabled a.btn {
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #824027;
+  color: #4ca17f;
   text-decoration: underline;
 }
 .btn-link:focus, .btn-link.focus {
@@ -4583,7 +4583,7 @@ input[type=button].btn-block {
 }
 .page-link:hover {
   z-index: 2;
-  color: #824027;
+  color: #4ca17f;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -4832,7 +4832,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #62301d;
+  color: #4ca17f;
   background-color: #f2dfd7;
   border-color: #edd2c7;
 }
@@ -5184,17 +5184,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #62301d;
+  color: #4ca17f;
   background-color: #edd2c7;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #62301d;
+  color: #4ca17f;
   background-color: #e7c2b4;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #62301d;
-  border-color: #62301d;
+  background-color: #4ca17f;
+  border-color: #4ca17f;
 }
 
 .list-group-item-secondary {
