trying more muted hover color

--- a/css/styles.css
+++ b/css/styles.css
@@ -9781,7 +9781,7 @@ button.bg-dark:focus {
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #4ca17f !important;
+  color: #3C7379 !important;
 }
 
 .text-secondary {
