--- a/css/styles.css
+++ b/css/styles.css
@@ -1718,11 +1718,11 @@ pre code {
 }
 
 .table-hover .table-primary:hover {
-  background-color: #4ca17f;
+  background-color: #3C7379;
 }
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #4ca17f;
+  background-color: #3C7379;
 }
 
 .table-secondary,
@@ -2883,7 +2883,7 @@ fieldset:disabled a.btn {
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #4ca17f;
+  color: #3C7379;
   text-decoration: underline;
 }
 .btn-link:focus, .btn-link.focus {
@@ -4583,7 +4583,7 @@ input[type=button].btn-block {
 }
 .page-link:hover {
   z-index: 2;
-  color: #4ca17f;
+  color: #3C7379;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5188,7 +5188,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   background-color: #edd2c7;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #4ca17f;
+  color: #3C7379;
   background-color: #e7c2b4;
 }
 .list-group-item-primary.list-group-item-action.active {
