--- a/css/styles.css
+++ b/css/styles.css
@@ -10069,7 +10069,7 @@ p.lead {
   justify-content: center;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #495057;
+  background-color: #0B5057;
   color: #fff;
   border-radius: 100%;
   font-size: 1.5rem;
@@ -10079,7 +10079,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #0B5057;
+  background-color: #3C7379;
 }
 
 .dev-icons {
