--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,2 @@
 /* mobile section */
-@media screen and (max-width: 400px) {
-  nav ul {
-    text-align: center;
-  }
-  nav ul li {
-    margin: 20px;
-  }
-  .project {
-    margin: 40px 0;
-  }
-}
+@media screen and (max-width: 400px) { }
