--- a/css/styles.css
+++ b/css/styles.css
@@ -7492,8 +7492,7 @@ button.bg-dark:focus {
 
 .mb-0,
 .my-0 {
-  margin-top: 20px;
-  margin-bottom: 0 !important;
+  margin: 1em 0 0 0;
   color: #343a40
 
 }
